--- a/src/app/post-login/components/footer/footer.component.html
+++ b/src/app/post-login/components/footer/footer.component.html
@@ -1,10 +1,10 @@
-<div class="footer-wrapper">
+<div class="footer-wrapper d-flex justify-content-between align-items-center m-auto">
   <div class="footer-logo">
     <img src="assets/images/roobrik_color_horizontal.png">
   </div>
-  <div class="footer-content">
+  <div class="footer-content  d-flex align-items-center">
     <nav>
-        <ul>
+        <ul class="d-flex justify-content-center">
             <li><a href="#">Contact us</a></li>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Terms & Conditions</a></li>
