--- a/src/app/post-login/components/footer/footer.component.scss
+++ b/src/app/post-login/components/footer/footer.component.scss
@@ -1,30 +1,25 @@
 
 .footer-wrapper {
   background: #F6F6F6;
-  padding: 40px 113px 44px 113px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding: 73px 9.323vw 54px;
+
+  @media screen and (min-width: 1920px) {
+    padding: 73px 179px 54px;  
+  }
 
   .footer-logo {
     img {
-      height: 25px;
+      height: 30px;
     }
   }
-  .footer-content {
-    display: flex;
-    align-items: center;
-    gap: 50px;
 
+  .footer-content {
+    gap: 50px;
   }
 }
 
-
-
 nav ul {
   list-style-type: none;
-  display: flex;
-  justify-content: center;
 }
 
 nav li {
@@ -33,7 +28,6 @@ nav li {
 }
 
 nav a {
-  
   text-decoration: none;
   color: black;
   font-weight: 600;
