--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "./../node_modules/bootstrap/scss/bootstrap.scss";
+
 /* You can add global styles to this file, and also import other style files */
 $font-family: "Helvetica Neue";
 
