Update home page ui

--- a/src/app/post-login/components/footer/footer.component.html
+++ b/src/app/post-login/components/footer/footer.component.html
@@ -5,7 +5,7 @@
   <div class="footer-content  d-flex align-items-center">
     <nav>
         <ul class="d-flex justify-content-center">
-            <li><a href="#">Contact us</a></li>
+            <li class="contact-us"><a href="#">Contact us</a></li>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Terms & Conditions</a></li>
         </ul>
