--- a/src/app/post-login/components/home/home.component.scss
+++ b/src/app/post-login/components/home/home.component.scss
@@ -20,62 +20,69 @@
     }
   }
 
-    .card-wrapper {
-      margin: 0 307px 115px;
-      width: 1346px;
-      gap: 4vw;
-      @media screen and (min-width: 1200px) {
-        gap: 6.77vw;
-      }
-      @media screen and (min-width: 1920px) {
-        gap: 130px;
-      }
+  .card-wrapper {
+    margin: 0 307px 115px;
+    width: 1346px;
+    gap: 3vw;
+    @media screen and (min-width: 1300px) {
+      gap: 5vw;
+    }
+    @media screen and (min-width: 1400px) {
+      gap: 6.7vw;
+    }
+    @media screen and (min-width: 1920px) {
+      gap: 130px;
+    }
 
-      .k-card {
-        max-width: 330px;
-        min-height: 585px;
-        border: none;
-        box-shadow: 0px 0px 30px #00000029;
- 
-        .k-card-body {
-          padding: 30px 23px 61px;
-  
-          .card-hedear {
-            font-size: 22px;
-            color: #8F3040;
-            font-weight: bold;
-            margin-bottom: 20px;
-            letter-spacing: 0;
-          }
+    .k-card {
+      max-width: 330px;
+      min-height: 506px;
+      border: none;
+      box-shadow: 0px 0px 30px #00000029;
 
-          .img-wrapper {
-            height: 210px;
-            margin-bottom: 32px;
+      .k-card-body {
+        padding: 30px 23px 61px;
 
-            img {
-              width: 200px;
-            }
-          }
+        .card-hedear {
+          font-size: 22px;
+          color: #8f3040;
+          font-weight: bold;
+          margin-bottom: 20px;
+          letter-spacing: 0;
+        }
 
-          p {
-            margin-right: 15px;
-            margin-bottom: 29px;
-            color: #262626;
-            letter-spacing: 0;
+        .img-wrapper {
+          height: 210px;
+          margin-bottom: 32px;
+
+          img {
+            width: 200px;
           }
         }
 
-        .k-card-actions {
-          .k-button {
-            font-weight: bold;
-            font-size: 14px;
-            border-width: 3px;
-            border-radius: 0;
-            color: #0A4569;
-            padding: 10px 16px;
-            border-color: #0A4569;
-          }
+        p {
+          min-height: 100px;
+          margin-right: 15px;
+          margin-bottom: 29px;
+          color: #262626;
+          letter-spacing: 0;
+        }
+      }
+
+      .k-card-actions {
+        .k-button {
+          font-weight: bold;
+          font-size: 14px;
+          border-width: 3px;
+          border-radius: 0;
+          color: #0a4569;
+          padding: 10px 16px;
+          border-color: #0a4569;
+        }
+        .k-button:hover {
+          background-color: #fff;
         }
       }
     }
+  }
 }
