--- a/src/app/post-login/components/dialog/dialog.component.html
+++ b/src/app/post-login/components/dialog/dialog.component.html
@@ -1,3 +1,6 @@
+<div class="container-center">
+
+</div>
 <kendo-dialog >
 <div class="container">
   <div class="d-flex flex-row-reverse ">
@@ -7,8 +10,10 @@
         width="20.28"
         height="20.28"
         fill="currentColor"
+        stroke="#555"
         class="bi bi-x-circle"
         viewBox="0 0 16 16"
+        style="font-weight: bold;"
       >
         <path
           d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
