--- a/src/app/post-login/components/standard-reports/standard-reports.component.html
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.html
@@ -36,14 +36,13 @@
       <button class="btn-download">Download</button>
 
       <div class="reports-data">
-        <!-- <ag-grid-angular 
-    style="width: 500px; height: 550px;" 
-    class="ag-theme-balham"
-    [rowData]="rowData" 
-    [gridOptions]="gridOptions"
-    [modules]="modules"
-    (gridReady)="onGridReady($event)">
-</ag-grid-angular> -->
+        <ag-grid-angular
+        style="width: 
+        1500px; height: 300px;"
+        class="ag-theme-balham"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+      ></ag-grid-angular>
 
       </div>
     </div>
