--- a/src/app/post-login/components/standard-reports/standard-reports.component.scss
+++ b/src/app/post-login/components/standard-reports/standard-reports.component.scss
@@ -54,34 +54,6 @@
         
         margin-top: 38px;
 
-        .k-grid{
-            width: 1100px;
-            height: max-content;
-            margin-left: -39px;
-           
-        }
-       
-        
-        .no-column-lines .k-grid tbody td {
-            border-right: none;
-        }
-        .report-name-cl{
-            margin-right: 10px;
-            width: 24px;
-            height: 24px;
-        }
-        .report-title-cl{
-            font-weight: 500px;
-            font-size:14px ;
-            line-height: 20px ;
-            color: #2F2F2F;
-            
-        }
-        .icon-down{
-            margin-left: 5px;
-        }
-        
-       
     }
     
     
@@ -98,3 +70,24 @@
 .ag-theme-alpine .ag-header-cell-label {
     font-style: italic;
 }
+.ag-theme-balham .ag-checkbox-input,
+.ag-theme-b .ag-checkbox-label {
+  /* Your custom styles here */
+  /* For example, changing the checkbox color and size */
+  background-color: #3498db;
+  border-color: #3498db;
+  width: 18px;
+  height: 18px;
+}
+.ag-checkbox-input-wrapper input, .ag-checkbox-input-wrapper input{
+}
+.ag-checkbox-input-wrapper::after {
+    
+    color: var(--ag-checkbox-unchecked-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    opacity: 1;
+
+    pointer-events: none;}
