Refactor ui code

--- a/src/app/post-login/components/footer/footer.component.scss
+++ b/src/app/post-login/components/footer/footer.component.scss
@@ -22,14 +22,14 @@ nav ul {
   list-style-type: none;
   gap: 4.47vw;
 
-  .contact-us{
+  .contact-us {
     margin-right: 20px;
   }
-}
 
-nav a {
-  text-decoration: none;
-  color: black;
-  font-weight: 600;
-  letter-spacing: 0.5px;
+  a {
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+  }  
 }
