--- a/src/app/post-login/components/home/home.component.html
+++ b/src/app/post-login/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home m-auto">
   <div class="header-wrapper">
-    <h1 class="heading text-primary-emphasis m-0">
+    <h1 class="heading  m-0">
       Welcome, [first name]!
     </h1>
   </div>
