--- a/src/app/post-login/components/header/header.component.scss
+++ b/src/app/post-login/components/header/header.component.scss
@@ -1,6 +1,8 @@
-.roobrik-logo{
+.header-wrapper {
+  .roobrik-logo {
     width: 202px;
     height: 35px;
+  }
 }
 
 a {
@@ -28,12 +30,21 @@ a {
   &.active-link::before {
     width: 100%;
   }
-}
 
-.borderless-select {
-  border: none;
-  padding: 5px;
-  font-size: 16px;
+  &.link {
+    font-size: 18px;
+    color: #165477;
+
+    &.home-link {
+      font-weight: bold;
+    }
+
+    &.link-reports {
+      position: relative;
+      margin-left: 2rem;
+    }
+  }
+
 }
 
 .popup {
@@ -45,28 +56,94 @@ a {
     display: block;
     padding: 10px;
   }
-}
 
-.link-reports{
-  position: relative;
-  margin-left: 2rem;
-}
+  &.popup-reports {
+    position: absolute;
+    right: 31vw;
+    width: 206px;
+    height: 124px;
+    color: #262626;
+    font-size: 18px;
 
-.popup-reports {
-  position: absolute;
-  right: 31vw;
-  width: 206px;
-  height: 124px;
-  color: #262626;
-  font-size: 18px;
-  @media screen and (min-width: 1500px) {
-    right: 32vw;
+    @media screen and (min-width: 1500px) {
+      right: 32vw;
+    }
+
+    span {
+      line-height: 17px;
+      padding: 23px 10px 22px;
+      height: 62px;
+    }
   }
 
-  span {
-    line-height: 17px;
-    padding: 23px 10px 22px;
-    height: 62px;
+  &.popup-info {
+    position: absolute;
+    padding-bottom: 25px !important;
+    padding-top: 23px !important;
+    width: 293px;
+    height: 179px;
+    right: 13vw;
+
+    @media screen and (min-width: 1500px) {
+      right: 14vw;
+    }
+
+    .info-border-bottom span {
+      padding: 0;
+      padding-bottom: 10px;
+      color: #2d2d2d;
+      font-size: 18px;
+    }
+
+    .text-secondary {
+      font-size: 14px;
+      color: #2d2d2d;
+    }
+
+    img {
+      height: 44px;
+      width: 44px;
+    }
+
+    .personal-content {
+      width: 55px;
+      height: 55px;
+    }
+
+    .user-name {
+      font-weight: bold;
+      color: #2d2d2d;
+    }
+
+    .email {
+      font-size: 14px;
+      color: #008dcc !important;
+    }
+
+    &:hover {
+      background-color: #EFEFEF;
+    }
+  }
+
+  &.popup-profile {
+    position: absolute;
+    right: 9vw;
+    width: 202px;
+    height: 186px;
+
+    @media screen and (min-width: 1500px) {
+      right: 10vw;
+    }
+
+    @media screen and (min-width: 1920px) {
+      width: 192px;
+    }
+
+    span {
+      padding: 15px 15px 15px 15px;
+      color: #2d2d2d;
+      font-size: 18px;
+    }
   }
 }
 
@@ -76,12 +153,15 @@ a {
   color: #215777 !important;
   font-size: 18px;
   font-weight: 600;
+
   @media screen and (min-width: 1500px) {
     font-size: 24px;
   }
+
   @media screen and (min-width: 1800px) {
     font-size: 28px;
   }
+
   &:hover,
   &.active {
     background-color: #7b7b7b !important;
@@ -89,78 +169,24 @@ a {
   }
 }
 
-.popup-info {
-  position: absolute;
-  padding-bottom: 25px !important;
-  padding-top: 23px !important;
-  width: 293px;
-  height: 179px;
-  right: 13vw;
-  @media screen and (min-width: 1500px) {
-    right: 14vw;
-  }
-  
-  .info-border-bottom span {
-    padding: 0;
-    padding-bottom: 10px;
-    color: #2d2d2d;
-    font-size: 18px;
-  }
-  .text-secondary {
-    font-size: 14px;
-    color: #2d2d2d;
-  }
-  img {
-    height: 44px;
-    width: 44px;
-  }
-
-  .user-name {
-    font-weight: bold;
-    color: #2d2d2d;
-  }
-  .email {
-    font-size: 14px;
-    color: #008dcc !important;
-  }
-
-  &:hover{
-    background-color: #EFEFEF;
-  }
-}
-
 .profile-btn {
   position: relative;
   background-color: #0a4569 !important;
   color: #ffffff !important;
+
   &:hover,
   &.active {
     background-color: #3d9ad3 !important;
   }
+
   @media screen and (min-width: 1500px) {
     font-size: 20px;
   }
+
   @media screen and (min-width: 1800px) {
     font-size: 22px;
     font-weight: normal;
     letter-spacing: 1px;
-  }
-}
-.popup-profile {
-  position: absolute;
-  right: 9vw;
-  width: 202px;
-  height: 186px;
-  @media screen and (min-width: 1500px) {
-    right: 10vw;
-  }
-  @media screen and (min-width: 1920px) {
-    width: 192px;
-  }
-  span {
-    padding: 15px 15px 15px 15px;
-    color: #2d2d2d;
-    font-size: 18px;
   }
 }
 
@@ -191,22 +217,9 @@ a {
 .action-btn {
   height: 2.91vw;
   width: 2.91vw;
+
   @media screen and (min-width: 1920px) {
     height: 56px;
     width: 56px;
   }
-}
-
-.links {
-  font-size: 18px;
-  color: #165477;
-
-  &.home-link{
-    font-weight: bold;
-  }
-}
-
-.personal-content{
-  width: 55px;
-  height: 55px;
 }
