--- a/src/app/post-login/post-login.component.html
+++ b/src/app/post-login/post-login.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="container-wrapper d-flex flex-column">
+    <app-header></app-header>
+    <div class="routing-page">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+</div>
