--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -35,10 +35,7 @@ a {
     font-size: 18px;
     color: #165477;
     cursor: pointer;
-
-    &.home-link {
-      font-weight: bold;
-    }
+    font-weight: 700;
 
     &.link-reports {
       position: relative;
