--- a/src/app/post-login/components/profile/profile.component.html
+++ b/src/app/post-login/components/profile/profile.component.html
@@ -1,64 +1,80 @@
 <div class="container">
-   <h1 class="txt-profile">Profile</h1>
-   <form class="k-form k-form-md" [formGroup]="registerForm">
+  <h1 class="txt-profile">Profile</h1>
+  <form class="k-form k-form-md" [formGroup]="registerForm">
     <fieldset class="k-form-fieldset">
-    
       <kendo-formfield>
         <kendo-label
           labelCssClass="k-form-label"
           [for]="firstName"
-      
           class="form-label"
-        >First Name</kendo-label>
+          >First Name</kendo-label
+        >
         <input
           formControlName="firstName"
           placeholder="Julian"
-          class="form-input custom-placeholder"    
+          class="form-input custom-placeholder"
           kendoTextBox
           #firstName
           required
-          
         />
 
-       
-        <kendo-formerror class="required-error"> First name is required</kendo-formerror>
+        <kendo-formerror class="required-error">
+          First name is required</kendo-formerror
+        >
       </kendo-formfield>
 
       <kendo-formfield>
         <kendo-label
           labelCssClass="k-form-label"
           [for]="lastName"
-          
           class="form-label"
-        >Last Name</kendo-label>
-        <input formControlName="lastName"    placeholder="Morse"
-        class="form-input custom-placeholder"     kendoTextBox #lastName required />
+          >Last Name</kendo-label
+        >
+        <input
+          formControlName="lastName"
+          placeholder="Morse"
+          class="form-input custom-placeholder"
+          kendoTextBox
+          #lastName
+          required
+        />
 
-        
-        <kendo-formerror class="required-error">Last name is required</kendo-formerror>
+        <kendo-formerror class="required-error"
+          >Last name is required</kendo-formerror
+        >
       </kendo-formfield>
 
-      
       <kendo-formfield>
         <kendo-label
           labelCssClass="k-form-label"
           [for]="email"
-          
           class="form-label"
-        >Email</kendo-label>
-        <input formControlName="email" placeholder="jmorse@roobrik.com"
-        class="form-input custom-placeholder" kendoTextBox #email required />
+          >Email</kendo-label
+        >
+        <input
+          formControlName="email"
+          placeholder="jmorse@roobrik.com"
+          class="form-input custom-placeholder"
+          kendoTextBox
+          #email
+          required
+        />
 
-        
-        <kendo-formerror class="required-error"> Not valid email format</kendo-formerror>
+        <kendo-formerror class="required-error">
+          Not valid email format</kendo-formerror
+        >
       </kendo-formfield>
 
-    <div class="k-form-buttons d-flex flex-column">
-        <button kendoButton themeColor="primary" class="btn-save" (click)="submitForm()">
+      <div class="k-form-buttons d-flex flex-column">
+        <button
+          kendoButton
+          themeColor="primary"
+          class="btn-save"
+          (click)="submitForm()"
+        >
           Save
         </button>
         <a class="reset-pass" href="http://">Reset your password via email</a>
-
       </div>
     </fieldset>
   </form>
