--- a/src/app/post-login/components/profile/profile.component.scss
+++ b/src/app/post-login/components/profile/profile.component.scss
@@ -1,71 +1,66 @@
-@import 'ag-grid-community/styles/ag-grid.css';
-@import 'ag-grid-community/styles/ag-theme-alpine.css';
-.container{
-   
-   
-    width: 100%;
-    height: 845px;
-    @media screen and (min-width: 1200px) {
-        max-width: 1140px;
-      }
-    .txt-profile{
-        
-        font-size: 30px;
-        margin-top: 103px;
-        font-weight: bold;
-        margin-bottom: 39px;
-        margin-left: 330px; 
-        color: #0A4569;
-    }
+@import "ag-grid-community/styles/ag-grid.css";
+@import "ag-grid-community/styles/ag-theme-alpine.css";
+.container {
+  width: 100%;
+  height: 845px;
+  @media screen and (min-width: 1200px) {
+    max-width: 1140px;
+  }
+  .txt-profile {
+    font-size: 30px;
+    margin-top: 103px;
+    font-weight: bold;
+    margin-bottom: 39px;
+    margin-left: 330px;
+    color: #0a4569;
+  }
 }
 .k-form {
-    margin: auto;
-    width: 450px;
-    height: 585px;
-    border: 1px solid #D0D0D0;
-    background-color: #F3F3F3;
-    padding: 58px 57px ;
-    
-    .form-label{
-        width: 100px;
-        height: 14px;
-        font-size: 16px;
-        font-weight: normal;
-        color: #7E7E7E;
-        margin-bottom: 12px;
-    }
-    .form-input{
-        margin-bottom: 35px;
-        width: 336px;
-        height: 50px;
-        border-radius: 2px;
-    }
-    .custom-placeholder::placeholder {
-        font-size: 16px;
-        padding-left: 15px;
-        color:#999797b6;
-        letter-spacing: 0px;
-        font-weight: 300;
-    }  
-    
-    .required-error{
-        margin-top: -30px;
-    }
-    .btn-save{
-     
-        width: 337px;
-        height: 52px;   
-        border-radius: 2px;   
-        color: white;
-        background-color: #0B4569; 
-        text-transform: uppercase;
-        border: none;
-        font-weight: bold;
-        
-    }
-    .reset-pass{
-        margin-top: 28px;
-        text-align: center;
-        text-decoration: underline;
-    }
+  margin: auto;
+  width: 450px;
+  height: 585px;
+  border: 1px solid #d0d0d0;
+  background-color: #f3f3f3;
+  padding: 58px 57px;
+
+  .form-label {
+    width: 100px;
+    height: 14px;
+    font-size: 16px;
+    font-weight: normal;
+    color: #7e7e7e;
+    margin-bottom: 12px;
+  }
+  .form-input {
+    margin-bottom: 35px;
+    width: 336px;
+    height: 50px;
+    border-radius: 2px;
+  }
+  .custom-placeholder::placeholder {
+    font-size: 16px;
+    padding-left: 15px;
+    color: #999797b6;
+    letter-spacing: 0px;
+    font-weight: 300;
+  }
+
+  .required-error {
+    margin-top: -30px;
+  }
+  .btn-save {
+    width: 337px;
+    height: 52px;
+    border-radius: 2px;
+    color: white;
+    background-color: #0b4569;
+    text-transform: uppercase;
+    border: none;
+    font-weight: bold;
+  }
+  .reset-pass {
+    margin-top: 28px;
+    text-align: center;
+    text-decoration: underline;
+  }
 }
