--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,6 +2,11 @@
   .roobrik-logo {
     width: 202px;
     height: 35px;
+
+    @media screen and (max-width: 1366px) {
+      height: 1.75rem;
+      width: 10rem;
+    }
   }
 }
 
@@ -32,17 +37,15 @@ a {
   }
 
   &.link {
-    font-size: 18px;
-    color: #165477;
+    font-size: 16px;
+    color: #0a4569;
     cursor: pointer;
-    font-weight: 700;
+    font-weight: bold;
 
     &.link-reports {
       position: relative;
-      margin-left: 2rem;
     }
   }
-
 }
 
 .popup {
@@ -119,7 +122,7 @@ a {
     }
 
     &:hover {
-      background-color: #EFEFEF;
+      background-color: #efefef;
     }
   }
 
@@ -168,6 +171,27 @@ a {
   }
 }
 
+.logo-container {
+  @media screen and (max-width: 1366px) {
+    margin-left: 7.06rem;
+  }
+}
+
+.nav-profile-container {
+  gap: 2.18rem;
+
+  div {
+    gap: 5.56rem;
+  }
+  nav {
+    gap: 6.25rem;
+
+    @media screen and (max-width: 1300px) {
+      gap: 6vw;
+    }
+  }
+}
+
 .profile-btn {
   position: relative;
   background-color: #0a4569 !important;
@@ -208,9 +232,15 @@ a {
 }
 
 .nav {
-  height: 119px;
-  margin-left: 9.270833333333334vw;
-  margin-right: 9.270833333333334vw;
+  height: 120px;
+
+  @media screen and (max-width: 1366px) {
+    gap: 11.56rem;
+  }
+
+  @media screen and (max-width: 1300px) {
+    gap: 8rem;
+  }
 }
 
 .action-btn {
@@ -218,7 +248,11 @@ a {
   width: 2.91vw;
 
   @media screen and (min-width: 1920px) {
-    height: 56px;
-    width: 56px;
+    height: 3.5rem;
+    width: 3.5rem;
   }
+}
+
+.profile-btns {
+  gap: 0.875rem;
 }
