Assets redirects file added

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="align-self-center">
-          <a class="link profile-link">Sunrise Senior Living</a>
+          <a class="link profile-link" (click) = "showProfileBtn($event)">Sunrise Senior Living</a>
         </div>
       </kendo-appbar-section>
     </kendo-appbar-section>
